# ChangeLog for net-misc/rsync
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.84 2005/10/16 23:58:36 vapier Exp $

*rsync-2.6.6-r1 (17 Oct 2005)

  17 Oct 2005; Mike Frysinger <vapier@gentoo.org>
  +files/rsync-2.6.6-acls.patch, +rsync-2.6.6-r1.ebuild:
  Fix from upstream for acl code #100981.

  13 Oct 2005; Kito <kito@gentoo.org> rsync-2.6.6.ebuild:
  ~ppc-macos keyword

  16 Sep 2005; Ciaran McCreesh <ciaranm@gentoo.org> ChangeLog:
  Converted to UTF-8, fixed encoding screwups

*rsync-2.6.0-r6 (01 Aug 2005)

  01 Aug 2005; Mike Frysinger <vapier@gentoo.org>
  +files/rsync-2.6.0-cvsignore.patch, +rsync-2.6.0-r6.ebuild:
  Add patch from upstream to fix -C #100861 by awk.

*rsync-2.6.6 (29 Jul 2005)

  29 Jul 2005; Mike Frysinger <vapier@gentoo.org> +rsync-2.6.6.ebuild:
  Version bump #100674 by Tim Yamin.

*rsync-2.6.5 (11 Jun 2005)

  11 Jun 2005; Mike Frysinger <vapier@gentoo.org> +rsync-2.6.5.ebuild:
  Version bump.

*rsync-2.6.0-r5 (31 May 2005)

  31 May 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +files/rsync-2.6.0-livecd-sigmask.patch, +rsync-2.6.0-r5.ebuild:
  Adding rsync patch for livecd/installer until python 2.4 goes stable.

*rsync-2.6.4 (06 Apr 2005)

  06 Apr 2005; Mike Frysinger <vapier@gentoo.org> +rsync-2.6.4.ebuild:
  Version bump #88029 by FieldySnuts.

*rsync-2.6.3-r1 (18 Mar 2005)

  18 Mar 2005; Mike Frysinger <vapier@gentoo.org> +rsync-2.6.3-r1.ebuild:
  Move the rsyncd.conf file to /etc.

*rsync-2.6.0-r4 (18 Mar 2005)

  18 Mar 2005; Mike Frysinger <vapier@gentoo.org> +rsync-2.6.0-r4.ebuild:
  Move the rsyncd.conf file to /etc and add some examples to the default
  config #80939.

  21 Nov 2004; Mike Frysinger <vapier@gentoo.org> rsync-2.6.0-r3.ebuild,
  rsync-2.6.3.ebuild:
  Make sure we update the rsync(1) manpage with the new .conf location too
  #71650 by Paul Oldham.

*rsync-2.6.3 (03 Oct 2004)
