@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/Attic/rsync-2.6.6-r1.ebuild,v 1.1 2005/10/16 23:58:36 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/Attic/rsync-2.6.6-r1.ebuild,v 1.2 2006/01/02 18:56:09 vapier Exp $
 
 inherit eutils flag-o-matic toolchain-funcs
 
@@ -11,7 +11,7 @@ SRC_URI="http://rsync.samba.org/ftp/rsync/${P/_/}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc-macos ~ppc64 ~s390 ~sh ~sparc ~x86"
-IUSE="build static acl ipv6"
+IUSE="acl build ipv6 static xinetd"
 
 RDEPEND="!build? ( >=dev-libs/popt-1.5 )
 	acl? ( sys-apps/acl )"
@@ -60,6 +60,10 @@ src_install() {
 		dodoc NEWS OLDNEWS README TODO tech_report.tex
 		insinto /etc
 		doins "${FILESDIR}"/rsyncd.conf
+		if use xinetd ; then
+			insinto /etc/xinetd.d
+			newins "${FILESDIR}"/rsyncd.xinetd rsyncd
+		fi
 	else
 		rm -r "${D}"/usr/share
 	fi
