@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/rsync
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.84 2005/10/16 23:58:36 vapier Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rsync/ChangeLog,v 1.85 2006/01/02 18:56:09 vapier Exp $
+
+  02 Jan 2006; Mike Frysinger <vapier@gentoo.org> +files/rsyncd.xinetd,
+  rsync-2.6.0-r6.ebuild, rsync-2.6.6-r1.ebuild:
+  Add an optional xinetd.d file by Malte S. Stretz #117466.
 
 *rsync-2.6.6-r1 (17 Oct 2005)
 
